...
    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:layout_height="48dp"
            android:layout_width="399dp"
            android:id="@+id/login"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/signUp"
            motion:layout_constraintBottom_toTopOf="@+id/gSignIn" />
        <Constraint
            motion:layout_editor_absoluteY="171dp"
...
        <Constraint
            android:layout_height="48dp"
            android:layout_width="399dp"
            android:id="@+id/signUp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginTop="20dp" />
        <Constraint
            android:layout_height="83dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
...
        <Constraint
            android:layout_height="63dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintHorizontal_bias="1.0"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="404dp"
            motion:layout_constraintTop_toBottomOf="@+id/email"
            android:id="@+id/password" />
        <Constraint
            android:layout_height="63dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintBottom_toBottomOf="parent"
...
