<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile2"
        android:icon="@drawable/profileicon"
        android:title="PROFILE"
        app:showAsAction="always" />
    <item
        android:id="@+id/bluetooth2"
        android:title="BLUETOOTH"
        android:icon="@drawable/bluetoothicon"
        app:showAsAction="always" />
    <item
        android:id="@+id/cameras2"
        android:title="CAMERAS"
        android:icon="@drawable/ic_camera"
...
