...
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">LOG IN</string>
    <string name="log_out">Log out</string>
    <string name="changeInfo">Change Info</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name_update">Display Name (optional)</string>
    <string name="sign_up">REGISTER</string>
...
