...
        app:layout_constraintVertical_bias="1.0"

        app:menu="@menu/appmenu"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/NewColor1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
...
